# eag7

./: .gitignore
examples/emdeddings/: embeddings.py  embeddings_compare.py
examples/rag/: action.py  agent.py  (+1 more)
math_agentv2/: main.py  readme.md
stock_research/: README.md  main.py  pyproject.toml  requirements.txt
stock_research/extension/: manifest.json  sidepanel.html  sidepanel.js  style.css
stock_research/src/stock_research/: __init__.py
stock_research/src/stock_research/agent/: .gitignore  __example3.py  __init__.py  action.py  agent.py  decision.py  example3.py  example4.py  memory.py  perception.py
stock_research/src/stock_research/agent/config/: log_config.py  mcp_server_config.py
stock_research/src/stock_research/agent/faiss_index/: doc_index_cache.json  metadata.json
stock_research/src/stock_research/agent/llm/: llm.py
stock_research/src/stock_research/agent/mcp_server/math/: mcp_math_server.py
stock_research/src/stock_research/agent/mcp_server/rag/: mcp_rag_server.py
stock_research/src/stock_research/agent/mcp_server/rag/faiss_index/: doc_index_cache.json
stock_research/src/stock_research/agent/rag/documents/: Experience Letter.docx
stock_research/src/stock_research/agent/rag/faiss_index/: metadata.json
stock_research/src/stock_research/agent/rag/rag_nh_rainbow/faiss_index/: doc_index_cache.json
stock_research/src/stock_research/agent/userinteraction/: userinteraction.py
stock_research/src/stock_research/backend/: app.py  message_broker.py  server_manager.py  stock_agent_handler.py  stock_analyzer.py
utils/: test_llm.py
(+22 files in other folders)
