[project]
name = "stock-research"
version = "0.1.0"
description = "Stock Research Assistant with AI-powered analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "yfinance>=0.2.35",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "faiss-cpu>=1.7.4",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=2.3.1",
    "fastmcp>=0.1.0",
    "markitdown[all]>=0.1.1",
    "google-auth-oauthlib>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_research"]